# partnercenter-cli-extension

./: .flake8  pyproject.toml  requirements.txt
.devcontainer/: devcontainer.json  postCreateCommand.sh
.github/workflows/: auto-black.yml  create-release.yml  pytest.yml  python.yml
partnercenter/: setup.py
partnercenter/azext_partnercenter/: __init__.py  _client_factory.py  _help.py
partnercenter/azext_partnercenter/clients/: __init__.py  _client_factory.py  _product_ingestion_api_client.py  _sdk_client_provider.py  _util.py  listing_media_client.py  offer_client.py  offer_listing_client.py  offer_submission_client.py  plan_client.py  plan_listing_client.py  plan_technicalconfiguration_client.py
partnercenter/azext_partnercenter/models/: __init__.py  listing.py  listing_contact.py  listing_image.py  listing_uri.py  offer.py  offer_setup.py  offer_submission.py  plan.py  plan_listing.py  resource.py  target_type.py
partnercenter/azext_partnercenter/operations/: __init__.py
partnercenter/azext_partnercenter/operations/marketplace_offer/: _format.py  commands.py  custom.py  params.py
partnercenter/azext_partnercenter/operations/marketplace_offer_listing/: commands.py
partnercenter/azext_partnercenter/operations/marketplace_offer_listing_contact/: commands.py  custom.py
partnercenter/azext_partnercenter/operations/marketplace_offer_listing_media/: commands.py  custom.py
partnercenter/azext_partnercenter/tests/: base.py  preparers.py
partnercenter/azext_partnercenter/vendored_sdks/: package-lock.json  package.json
(+214 files in other folders)
